# openakita

./: .commitmsg  .commitmsg_crash  .commitmsg_mcp  .commitmsg_nsis2  .commitmsg_ui2  .env.bak  .gitignore  AGENTS.md  Dockerfile  README.md  README_CN.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backfill-oss.yml  ci.yml  mobile.yml  mvp-deploy.yml  publish-release.yml  release-dryrun.yml  release.yml
apps/setup-center/: AGENTS.md  capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
apps/setup-center/dist-web/: index.html
apps/setup-center/public/: manifest.json
apps/setup-center/src/: App.tsx  api.ts  env.d.ts  icons.tsx  main.tsx  providers.ts  streamEvents.ts  styles.css  theme.ts  types.ts
apps/setup-center/src-tauri/: Cargo.toml  tauri.conf.json
docs/: DINGTALK_IM_NOTES.md  FEISHU_IM_NOTES.md  ONEBOT_IM_NOTES.md  OpenAkita_公众号规划与配图需求.md  TELEGRAM_IM_NOTES.md  WEWORK_WS_IM_NOTES.md  feedback-debug-guide.md  plugin-system-overview.md
docs/plans/: platform-incentive-openclaw-compat.md
docs/research/: cursor-agent-mode-full-system-prompt.md  cursor-system-prompt-analysis.md
examples/: .env.example
examples/plugins/echo-channel/: README.md  plugin.json  plugin.py
examples/plugins/github-mcp/: README.md  mcp_config.json  plugin.json
examples/plugins/hello-tool/: README.md  plugin.json  plugin.py
examples/plugins/message-logger/: README.md  plugin.json  plugin.py
examples/plugins/obsidian-kb/: README.md  config_schema.json  plugin.json  plugin.py
examples/plugins/ollama-provider/: README.md  config_schema.json  plugin.json  plugin.py
examples/plugins/qdrant-memory/: README.md  config_schema.json  plugin.json  plugin.py
examples/plugins/translate-skill/: README.md  SKILL.md  plugin.json
identity/: AGENT.md.example  POLICIES.yaml  SOUL.md.example
identity/personas/: default.md
identity/runtime/: agent.core.md  agent.tooling.md  soul.summary.md
openakita-plugin-sdk/: README.md  pyproject.toml
openakita-plugin-sdk/docs/: api-reference.md  cross-ecosystem.md  getting-started.md  hooks.md  permissions.md  plugin-json.md  protocols.md  testing.md
openakita-plugin-sdk/docs/examples/: channel-plugin.md  hook-plugin.md  llm-plugin.md  memory-plugin.md  rag-plugin.md  tool-plugin.md
openakita-plugin-sdk/src/openakita_plugin_sdk/: __init__.py  channel.py  config.py  core.py  decorators.py  hooks.py  llm.py  protocols.py  scaffold.py  testing.py  tools.py  types.py  version.py
scripts/: deploy.ps1  deploy.sh  version.py
skills/amap-maps/: SKILL.md
skills/amap-maps/agents/: openai.yaml
skills/baidu-baike/: SKILL.md
skills/baidu-baike/agents/: openai.yaml
skills/baidu-deep-research/: SKILL.md
skills/baidu-deep-research/agents/: openai.yaml
skills/baidu-ecommerce/: SKILL.md
skills/baidu-ecommerce/agents/: openai.yaml
skills/baidu-famou/: SKILL.md
skills/baidu-famou/agents/: openai.yaml
skills/baidu-maps/: SKILL.md
skills/baidu-maps/agents/: openai.yaml
skills/baidu-marketing/: SKILL.md
skills/baidu-marketing/agents/: openai.yaml
skills/baidu-netdisk/: SKILL.md
skills/baidu-netdisk/agents/: openai.yaml
skills/baidu-paddleocr-doc/: SKILL.md
skills/baidu-paddleocr-doc/agents/: openai.yaml
skills/baidu-paddleocr-text/: SKILL.md
skills/baidu-paddleocr-text/agents/: openai.yaml
skills/baidu-picture-book/: SKILL.md
skills/baidu-picture-book/agents/: openai.yaml
skills/baidu-ppt-gen/: SKILL.md
skills/baidu-ppt-gen/agents/: openai.yaml
skills/baidu-scholar/: SKILL.md
skills/baidu-scholar/agents/: openai.yaml
skills/baidu-search/: SKILL.md
skills/baidu-search/agents/: openai.yaml
skills/baidu-video-notes/: SKILL.md
skills/baidu-video-notes/agents/: openai.yaml
skills/baidu-yijian/: SKILL.md
skills/baidu-yijian/agents/: openai.yaml
skills/didi-ride/: SKILL.md
skills/didi-ride/agents/: openai.yaml
skills/dingtalk-cli/: SKILL.md
skills/dingtalk-cli/agents/: openai.yaml
skills/feishu-cli/: SKILL.md
skills/feishu-cli/agents/: openai.yaml
skills/miaoda-app-builder/: SKILL.md
skills/miaoda-app-builder/agents/: openai.yaml
skills/netease-music/: SKILL.md
skills/netease-music/agents/: openai.yaml
skills/qq-channel/: SKILL.md
skills/qq-channel/agents/: openai.yaml
skills/seedance-video/: SKILL.md
skills/seedance-video/agents/: openai.yaml
skills/smtp-email-sender/: .openakita-i18n.json  SKILL.md
skills/smtp-email-sender/scripts/: configure_smtp.py  send_email.py  test_smtp.py
skills/system/generate-agents-md/: SKILL.md
skills/taobaoke-tool/: SKILL.md
skills/taobaoke-tool/agents/: openai.yaml
skills/tencent-ima/: SKILL.md
skills/tencent-ima/agents/: openai.yaml
skills/tencent-meeting/: SKILL.md
skills/tencent-meeting/agents/: openai.yaml
skills/tencent-news/: SKILL.md
skills/tencent-news/agents/: openai.yaml
skills/tencent-survey/: SKILL.md
skills/tencent-survey/agents/: openai.yaml
skills/wecom-cli/: SKILL.md
skills/wecom-cli/agents/: openai.yaml
skills/xiaodu-control/: SKILL.md
skills/xiaodu-control/agents/: openai.yaml
src/openakita/: AGENTS.md  config.py  events.py  main.py
src/openakita/agents/: backends.py  factory.py  fallback.py  lock_manager.py  manifest.py  orchestrator.py  presets.py  profile.py  task_queue.py
src/openakita/api/: auth.py  schemas.py  server.py
src/openakita/channels/: base.py  bot_config.py  chat_aliases.py  gateway.py  group_response.py  media_parser.py  policy.py  registry.py  retry.py  stream_presenter.py  text_splitter.py  types.py
src/openakita/cli/: input.py  stream_renderer.py
tests/e2e/: test_api_comprehensive.py
tests/integration/: test_im_adapters.py
tests/orgs/: test_api.py  test_runtime.py
tests/unit/: test_budget.py  test_context_budget_adaptive.py  test_delegation_preamble.py  test_dingtalk_thinking_card.py  test_multi_agent.py  test_org_setup_tool.py  test_permission_refactor.py  test_runtime_env.py  test_security.py  test_wework_ws_adapter.py
(+348 files in other folders)
